[tool.poetry]
name = "com-alfrice-maplibre1"
version = "0.1.0"
description = ""
authors = ["alfrice <vinsanau@gmail.com>"]
readme = "README.md"
packages = [{include = "com"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
